--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@octokit/auth-app": "^3.0.0",
+    "@octokit/rest": "^18.2.0",
+    "@types/react-dom": "^16.0.0",
     "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^16.0.1",
+    "react-dom": "^16.0.1",
+    "react-markdown": "^5.0.3",
+    "react-markdown-editor-lite": "^1.2.4",
+    "react-router-dom": "^5.2.0",
+    "remark-gfm": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^16.0.0",
+    "dotenv": "^8.2.0",
+    "typescript": "^4.1.5"
   }
 }
