--- a/package.json
+++ b/package.json
@@ -8,19 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@amrn/react-simplemde": "^1.0.0",
     "@octokit/auth-app": "^3.0.0",
     "@octokit/rest": "^18.2.0",
     "@types/react-dom": "^16.0.0",
+    "gray-matter": "^4.0.2",
+    "highlight.js": "^10.6.0",
     "markdown-it": "^12.0.4",
     "next": "10.0.7",
     "react": "^16.0.1",
     "react-dom": "^16.0.1",
     "react-markdown-editor-lite": "^1.2.4",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-simplemde": "^0.0.2",
+    "simplemde": "^1.11.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^16.0.0",
+    "raw-loader": "^4.0.2",
     "typescript": "^4.1.5"
   }
 }
